# Aalborg-University-Homework

./: CMakeLists.txt  README.md
Imperative-Programming/: Readme.MD
Imperative-Programming/Hand-in-assignments/: handin1.c  handin2.c  handin3.c  handin4.c
Imperative-Programming/Miniprojects/: miniproject1.c  miniproject3.c
Imperative-Programming/Miniprojects/Ressources/: kampe-2020-2021.txt
Internetworking-and-web-programming/: package-lock.json  package.json
Internetworking-and-web-programming/Customprojects/Crowdcrushprevention/prototype2/: index.html  style.css
Internetworking-and-web-programming/Customprojects/Crowdcrushprevention/prototype3/: index.html  style.css
Internetworking-and-web-programming/Customprojects/Portfoliosite/: arcadestyle-v1.html  index.html  minimaliststyle-v1.html  retrohackstyle-v1.html  retrohackstyle-v2.html  scuffedretardstyle-v1.html  scuffedretardstyle-v2.html  xpstyle-v1.html  xpstyle-v2.html
Internetworking-and-web-programming/Customprojects/Portfoliosite/js/: githubapi
Internetworking-and-web-programming/Exercises/Intro/: index.html
Internetworking-and-web-programming/Exercises/Lektion2/: Fun_with_Functions.js
Internetworking-and-web-programming/Exercises/Lektion2exercises/: Objects_and_Arrays.js
Internetworking-and-web-programming/Exercises/Lektion5/: index.html  maxesindex.html
Internetworking-and-web-programming/Exercises/Triangle/: script.js
Internetworking-and-web-programming/Simple HTML Script Node/: demo.html
Probability Theory and Linear Algebra/: Test.py  lecturescripts.py  main.py  script.py
(+16 files in other folders)
